fix megamenu z-index

--- a/frontend/scss/components/textbook__sidebar.scss
+++ b/frontend/scss/components/textbook__sidebar.scss
@@ -8,6 +8,7 @@
   height: calc(100vh - #{$qiskit-navbar-height});
   width: $left-sidebar-width;
   position: fixed;
+  z-index: 1;
 
   @media (max-width: $browser-small) {
     padding-top: 36px;
